--- a/package.json
+++ b/package.json
@@ -1,25 +1,30 @@
 {
-  "name": "injector",
+  "name": "minimal-di",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "build/src/index.js",
   "scripts": {
-    "pretest": "tsc",
-    "test": "mocha ./build/test/ --recursive",
+    "pretest": "tsc -p tsconfig.test.json",
+    "test": "mocha ./test/build/test/ --recursive",
     "watch": "mocha-typescript-watch",
-    "prepare": "tsc"
+    "prepare": "tsc -p tsconfig.json"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "files": [
+    "build/src/**/*.js"
+  ],
   "dependencies": {
+    "reflect-metadata": "^0.1.10"
+  },
+  "devDependencies": {
     "@types/chai": "^4.0.4",
     "@types/mocha": "^2.2.43",
     "@types/sinon": "^2.3.6",
     "chai": "^4.1.2",
     "mocha": "^4.0.1",
     "mocha-typescript": "^1.1.11",
-    "reflect-metadata": "^0.1.10",
     "sinon": "^4.0.1",
     "ts-node": "^3.3.0",
     "tslib": "^1.8.0",
