--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "moduleResolution": "node",
         "rootDir": "./src",
         "outDir": "./build",
-        "importHelpers": true
+        "importHelpers": true,
+        "declaration": true
     },
     "include": [
         "./src/**/*"
