Enabled strict tslint rules
Also updated all source files to make sure they match those rules or added exceptions when sensible.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
         "src/**/*.js.map": { "when": "$(basename)" },
         "test/**/*.js": { "when": "$(basename).ts" },
         "test/**/*.js.map": { "when": "$(basename)" }
-    }
+    },
+    "editor.rulers": [100, 120]
 }
