--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,16 @@
         "rootDir": "./src",
         "outDir": "./build",
         "importHelpers": true,
-        "declaration": true
+        "declaration": true,
+
+        "alwaysStrict": true,
+        "strictNullChecks": true,
+        "noImplicitAny": true,
+        "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "noImplicitReturns": true,
+        "noImplicitThis": true,
+        "noFallthroughCasesInSwitch": true
     },
     "include": [
         "./src/**/*"
