--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "author": "",
   "license": "ISC",
   "files": [
+    "build/**/*.js",
+    "build/**/*.d.ts",
     "src/**/*.ts",
     "test/**/*.ts"
   ],
